--- a/css/footer.css
+++ b/css/footer.css
@@ -1,6 +1,6 @@
 .footer {
     position: relative;
-    padding: 50px 0;
+    padding: 100px 0;
     color: #000000;
     background-color: #ffffff;
     bottom: 0%;
@@ -94,6 +94,22 @@
 }
 
 .powered {
-    width: 150px;
+    width: 100%;
     height: auto;
+}
+
+.powered img {
+    width: 16rem;
+}
+
+.links {
+    position: absolute;
+    right: 8rem;
+    bottom: 20%;
+}
+
+.links ul li {
+    padding-bottom: 1.5rem;
+    font-size: 1rem;
+    color: #ffffff;
 }
