--- a/css/music.css
+++ b/css/music.css
@@ -1,146 +1,64 @@
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-
-html {
-    font-size: 62.5%;
-}
-
-body {
-    font-family: 'Poppins', 'Montserrat', sans-serif;
-    background-color: #f0f0f0;
-    /* display: flex; */
+#card {
+    display: flex;
     justify-content: center;
-    align-items: center;
-    /* height: 100vh; */
-    -webkit-tap-highlight-color: transparent;
+    border-radius: 20px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, .1);
+    margin: 1rem;
+    padding: 2rem;
+    width: 100%;
 }
 
-.container {
-    width: 30rem;
-    margin-bottom: 2rem;
-}
-
-.heading {
-    color: #000;
-    text-align: center;
-    text-shadow: 2px 1px #848484;
-    font-size: 4rem;
-    font-weight: 600;
-}
-
-.music-container {
-    background-color: #fff;
-    border-radius: 1rem;
-    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.4);
-    padding: 1rem 2rem;
-    margin-top: 7rem;
+#card #display {
+    width: 60%;
+    border-radius: 20px 0 0 20px;
+    background: rgba(239, 179, 179, 0.5);
+    backdrop-filter: blur(30px) hue-rotate(20deg);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 1em;
 }
 
-#cover-box {
-    border-radius: 1rem;
-    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.4);
-    position: relative;
-    bottom: 4rem;
-    width: 85%;
-}
-
-#cover {
-    border-radius: inherit;
-    display: block;
-    height: 100%;
-    width: 100%;
-}
-
-#music-box {
-    width: 100%;
-}
-
-#music-info {
+#card #display>* {
     text-align: center;
-    width: 100%;
-    position: relative;
-    bottom: 2rem;
 }
 
-#title {
-    font-size: 2rem;
-    font-weight: 600;
+#card #display #art {
+    height: 300px;
+    border-radius: 20px 20px 20px 20px;
+    margin-bottom: 2rem;
 }
 
-#artist {
-    font-size: 1.4rem;
-    font-weight: 500;
-}
-
-#progress-container {
-    height: 4px;
-    width: 100%;
-    background-color: rgba(0, 0, 0, 0.2);
-    margin: 2rem 0 1rem;
-    cursor: pointer;
-    border-radius: 8px;
-}
-
-#progress {
-    background-color: #000;
-    width: 0%;
-    height: inherit;
-    border-radius: inherit;
-    transition: width 100ms ease-in;
-}
-
-#timer-bar {
+#card #list {
+    width: 40%;
+    border-radius: 0 20px 20px 0;
+    background: transparent;
     display: flex;
-    justify-content: space-between;
-    font-size: 1.4rem;
+    flex-direction: column;
 }
 
-#control-box {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 1rem;
+#card #list .item {
+    padding: 0 1em;
+    background: white;
+    transition: all 0.3s ease;
 }
 
-.btn {
-    display: inline-block;
-    font-size: 1.6rem;
-    padding: 1rem;
+#card #list .item:first-of-type {
+    border-radius: 0 20px 0 0;
+}
+
+#card #list .item:last-of-type {
+    border-radius: 0 0 20px 0;
+}
+
+#card #list .item.is-active {
+    background: rgba(255, 255, 255, .5);
+    backdrop-filter: blur(30px) hue-rotate(20deg);
+    transition: all 0.3s ease;
+}
+
+#card #list .item:hover {
     cursor: pointer;
-    border: none;
-    outline: none;
-    border-radius: 4rem;
-    color: #a0a0a0;
-    transition: background 200ms linear, color 200ms linear;
-}
-
-.special-btn {
-    background-color: #000;
-    color: #fff;
-    font-size: 2.2rem;
-    margin: 0 1rem;
-    padding: 1.4rem;
-    cursor: pointer;
-    border: none;
-    outline: none;
-    border-radius: 4rem;
-    transition: opacity 200ms linear;
-}
-
-@media (hover: hover) {
-    .btn:hover {
-        background-color: #d8d8d8;
-        color: #545454;
-    }
-
-    .special-btn:hover {
-        opacity: 0.75;
-    }
+    background: rgb(209, 201, 201);
 }
