--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -49,27 +49,27 @@
 }
 
 .facebook {
-    background-color: #3b5999;
+    background-color: #ffffff00;
 }
 
 .twitter {
-    background-color: #3AAFD6;
+    background-color: #ffffff00;
 }
 
 .print {
-    background-color: #de3c7d;
+    background-color: #ffffff00;
 }
 
 .pinterest {
-    background-color: #BD081C;
+    background-color: #ffffff00;
 }
 
 .linkedin {
-    background-color: #0e76a8;
+    background-color: #ffffff00;
 }
 
 .instagram {
-    background-color: #c32aa3;
+    background-color: #ffffff00;
 }
 
 .so-collapse {
