--- a/css/header.css
+++ b/css/header.css
@@ -50,3 +50,14 @@ body {
 .tour-button {
     margin-top: 3rem;
 }
+
+.powered img {
+    width: 0.09rem;
+    height: 4rem;
+
+}
+
+.powered {
+    position: absolute;
+    margin-top: -4rem;
+}
