--- a/css/header.css
+++ b/css/header.css
@@ -29,7 +29,7 @@ body {
 
 .hero {
     width: 100%;
-    height: auto;
+    height: 100%;
 }
 
 .sub-text {
@@ -49,7 +49,8 @@ body {
 
 .tour-button {
     position: absolute;
-    top: 40rem;
-    width: 21rem;
-    left: 37rem;
+    top: 44rem;
+    width: 20rem;
+    left: 50rem;
+
 }
