--- a/css/footer.css
+++ b/css/footer.css
@@ -9,6 +9,8 @@
     background-size: 100% 100%;
 }
 
+
+
 .footer h3 {
     margin-top: 0;
     margin-bottom: 12px;
@@ -86,7 +88,7 @@
 }
 
 .footer .copyright {
-    /* padding-top: 35px; */
+    padding-top: 35px;
     opacity: 0.3;
     font-size: 13px;
     margin-bottom: 0;
@@ -96,7 +98,7 @@
 .powered {
     width: 100%;
     height: auto;
-    /* padding-top: 35px; */
+    padding-top: 20px;
     opacity: 0.3;
     font-size: 13px;
     margin-bottom: 0;
@@ -118,4 +120,31 @@
     padding-bottom: 1.5rem;
     font-size: 1rem;
     color: #ffffff;
+}
+
+@media only screen and (max-width: 600px) {
+    .footer {
+        background-image: url(/Assets/mobile-footer.png);
+        background-repeat: no-repeat;
+        background-size: 100% auto;
+    }
+
+    .powered {
+        width: 100%;
+        height: auto;
+        padding-top: 0px;
+        opacity: 0.3;
+        font-size: 3px;
+        margin-bottom: 0;
+        padding-left: 5rem;
+    }
+
+    .footer .copyright {
+        padding-top: 0px;
+        opacity: 0.3;
+        font-size: 3px;
+        margin-bottom: 0;
+        padding-left: 4rem;
+    }
+
 }
