--- a/css/header.css
+++ b/css/header.css
@@ -15,6 +15,7 @@ body {
     margin: 0%;
     padding: 0%;
     font-family: mySecondFont;
+    overflow-x: hidden;
 }
 
 
@@ -27,9 +28,22 @@ body {
 
 }
 
-.hero {
+/* .hero {
     width: 100%;
     height: 100%;
+    background-image: url('/Assets/hero-image-home-page-v2.jpg');
+    background-size: 100% 100%;
+
+} */
+
+.header {
+    position: relative;
+    padding: 23rem 48rem;
+    color: #000000;
+    background-color: #ffffff;
+    background-image: url(/Assets/hero-image-home-page-v2.jpg);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
 }
 
 .sub-text {
@@ -47,10 +61,27 @@ body {
     top: 10.5rem;
 }
 
+
 .tour-button {
     position: absolute;
-    top: 44rem;
-    width: 20rem;
-    left: 50rem;
+    top: 35rem;
+    width: 16rem;
+    left: 39.5rem;
+}
 
+@media only screen and (max-width: 600px) {
+    .header {
+        position: relative;
+        padding: 20rem 12rem;
+        background-image: url(/Assets/mobile-heroImage.jpg);
+        background-repeat: no-repeat;
+        background-size: 100% 100%;
+    }
+
+    .tour-button {
+        position: absolute;
+        top: 33.5rem;
+        width: 9.5rem;
+        left: 6rem;
+    }
 }
