--- a/css/music.css
+++ b/css/music.css
@@ -62,3 +62,70 @@
     cursor: pointer;
     background: rgb(209, 201, 201);
 }
+
+@media only screen and (max-width: 600px) {
+    #card {
+        display: flex;
+        justify-content: center;
+        border-radius: 20px;
+        box-shadow: 0 0 20px rgba(0, 0, 0, .1);
+        margin: 1rem;
+        padding: 2rem;
+        width: 100%;
+    }
+
+    #card #display {
+        width: 40%;
+        border-radius: 20px 0 0 20px;
+        background: rgba(239, 179, 179, 0.5);
+        backdrop-filter: blur(30px) hue-rotate(20deg);
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 1em;
+    }
+
+    #card #display>* {
+        text-align: center;
+    }
+
+    #card #display #art {
+        height: 300px;
+        border-radius: 20px 20px 20px 20px;
+        margin-bottom: 2rem;
+    }
+
+    #card #list {
+        width: 40%;
+        border-radius: 0 20px 20px 0;
+        background: transparent;
+        display: flex;
+        flex-direction: column;
+    }
+
+    #card #list .item {
+        padding: 0 1em;
+        background: white;
+        transition: all 0.3s ease;
+    }
+
+    #card #list .item:first-of-type {
+        border-radius: 0 20px 0 0;
+    }
+
+    #card #list .item:last-of-type {
+        border-radius: 0 0 20px 0;
+    }
+
+    #card #list .item.is-active {
+        background: rgba(255, 255, 255, .5);
+        backdrop-filter: blur(30px) hue-rotate(20deg);
+        transition: all 0.3s ease;
+    }
+
+    #card #list .item:hover {
+        cursor: pointer;
+        background: rgb(209, 201, 201);
+    }
+}
