--- a/css/footer.css
+++ b/css/footer.css
@@ -124,27 +124,32 @@
 
 @media only screen and (max-width: 600px) {
     .footer {
+        position: relative;
         background-image: url(/Assets/mobile-footer.png);
         background-repeat: no-repeat;
         background-size: 100% auto;
+        bottom: 0rem;
+        padding-bottom: 0rem;
     }
 
     .powered {
         width: 100%;
         height: auto;
-        padding-top: 0px;
+        padding-top: -100rem;
         opacity: 0.3;
-        font-size: 3px;
-        margin-bottom: 0;
-        padding-left: 5rem;
+        font-size: 13px;
     }
 
     .footer .copyright {
-        padding-top: 0px;
+        position: absolute;
         opacity: 0.3;
-        font-size: 3px;
+        font-size: 13px;
         margin-bottom: 0;
-        padding-left: 4rem;
+        padding-left: 2rem;
     }
 
+    .powered img {
+        width: 1rem;
+        opacity: 0;
+    }
 }
