--- a/css/header.css
+++ b/css/header.css
@@ -70,6 +70,20 @@ body {
 }
 
 @media only screen and (max-width: 600px) {
+    body {
+        margin: 0%;
+        padding: 0%;
+        font-family: mySecondFont;
+        overflow-x: hidden;
+    }
+
+    *{
+        margin: 0%;
+        padding: 0%;
+        font-family: mySecondFont;
+        overflow-x: hidden;
+    }
+
     .header {
         position: relative;
         padding: 20rem 12rem;
