--- a/css/header.css
+++ b/css/header.css
@@ -69,6 +69,31 @@ body {
     left: 39.5rem;
 }
 
+.ct-animate-blink {
+    position: absolute;
+    top: 3.5rem;
+    font-size: 2rem;
+    left: 3rem;
+    text-decoration: none;
+    color: #450A0A;
+    animation: blink 1.5s infinite;
+    animation-fill-mode: both;
+}
+
+@keyframes blink {
+    0% {
+        opacity: 0
+    }
+
+    50% {
+        opacity: 1
+    }
+
+    100% {
+        opacity: 0
+    }
+}
+
 @media only screen and (max-width: 600px) {
     body {
         margin: 0%;
@@ -98,4 +123,30 @@ body {
         width: 9.5rem;
         left: 6rem;
     }
+
+    .ct-animate-blink {
+        position: absolute;
+        top: 1.8rem;
+        font-size: 1.3rem;
+        left: 1.6rem;
+        text-decoration: none;
+        color: #450A0A;
+        animation: blink 1.5s infinite;
+        animation-fill-mode: both;
+    }
+
+    @keyframes blink {
+        0% {
+            opacity: 0
+        }
+
+        50% {
+            opacity: 1
+        }
+
+        100% {
+            opacity: 0
+        }
+    }
+
 }
