--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -5,8 +5,8 @@
     z-index: 1000;
     transition: all linear 0.2s;
     float: left;
-    -webkit-transform: scaleX(-1);
-    transform: scaleX(-1);
+    /* -webkit-transform: scaleX(-1);
+    transform: scaleX(-1); */
 }
 
 #right.s-soft {
@@ -79,13 +79,13 @@
 @media only screen and (max-width: 600px) {
     .s-soft {
         position: fixed;
-        top: 60px;
+        top: 40px;
         left: 10;
         z-index: 1000;
         transition: all linear 0.2s;
-        float: left;
-        -webkit-transform: scaleX(-1);
-        transform: scaleX(-1);
+        float: right;
+        /* -webkit-transform: scaleX(-1);
+        transform: scaleX(-1); */
     }
 
     #right.s-soft {
