--- a/css/header.css
+++ b/css/header.css
@@ -112,17 +112,20 @@ body {
 
     .header {
         position: relative;
-        padding: 20rem 12rem;
+        padding: 20rem 10rem;
         background-image: url(/Assets/mobile-heroImage.jpg);
         background-repeat: no-repeat;
         background-size: 100% 100%;
+        margin-top: 0%;
+        padding-top: 0%s;
+
     }
 
     .tour-button {
         position: absolute;
         top: 33.5rem;
-        width: 9.5rem;
-        left: 6rem;
+        width: 10rem;
+        left: 6.5rem;
     }
 
     .ct-animate-blink {
