--- a/css/characterSheet.css
+++ b/css/characterSheet.css
@@ -1,3 +1,34 @@
-.comic-card {
+/* .comic-card {
     margin-top: 4rem;
+}
+ */
+
+
+#loader {
+    position: fixed;
+    top: 0%;
+    margin-top: 0%;
+    padding-top: 0%;
+    z-index: 1;
+    width: 2rem;
+    background-image: url('/Assets/fifi_cycle_animation.mp4');
+    background: cover;
+    background-repeat: no-repeat;
+}
+
+
+
+/* Add animation to "page content" */
+.animate-bottom {
+    position: relative;
+    -webkit-animation-name: animatebottom;
+    -webkit-animation-duration: 1s;
+    animation-name: animatebottom;
+    animation-duration: 1s
+}
+
+
+#myDiv {
+    display: none;
+    text-align: center;
 }
