--- a/css/header.css
+++ b/css/header.css
@@ -154,3 +154,13 @@ body {
     }
 
 }
+
+.back-button {
+    position: absolute;
+    height: 3rem;
+    cursor: pointer;
+    border: 0cm;
+    background-color: rgba(255, 255, 255, 0);
+    margin-top: 1rem;
+    margin-left: 1rem;
+}
