--- a/css/subscription.css
+++ b/css/subscription.css
@@ -14,6 +14,9 @@ body {
     align-items: center;
     padding: 10px;
     background: white;
+    background-image: url(/Assets/subscribe-bg-8.png);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .container {
