--- a/css/subscription.css
+++ b/css/subscription.css
@@ -14,7 +14,7 @@ body {
     align-items: center;
     padding: 10px;
     background: white;
-    background-image: url(/Assets/subscribe-bg-8.png);
+    background-image: url(/Assets/Asset33.png);
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -22,7 +22,7 @@ body {
 .container {
     max-width: 700px;
     width: 100%;
-    background-color: #fff;
+    /* background-color: #fff; */
     padding: 25px 30px;
     border-radius: 5px;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.15);
