--- a/css/subscription.css
+++ b/css/subscription.css
@@ -25,7 +25,7 @@ body {
     /* background-color: #fff; */
     padding: 25px 30px;
     border-radius: 5px;
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.15);
+    /* box-shadow: 0 5px 10px rgba(0, 0, 0, 0.15); */
 }
 
 .container .title {
