--- a/css/quiz.css
+++ b/css/quiz.css
@@ -74,6 +74,12 @@ body {
     transition: all 0.3s ease;
 }
 
+.info_box_bg {
+    background: #fff;
+    width: 100%;
+    height: 100%;
+}
+
 .info_box .info-title {
     height: 60px;
     width: 100%;
